--- a/package.json
+++ b/package.json
@@ -9,15 +9,24 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.9.0",
+    "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-slot": "^1.1.0",
+    "axios": "^1.7.7",
     "bcryptjs": "^2.4.3",
+    "class-variance-authority": "^0.7.0",
+    "lucide-react": "^0.445.0",
     "mongoose": "^8.5.4",
-    "next": "14.2.6",
+    "next": "^14.2.13",
     "next-auth": "^4.24.7",
     "react": "^18",
     "react-dom": "^18",
     "react-email": "^3.0.1",
     "react-emails": "^1.2.3",
+    "react-hook-form": "^7.53.0",
     "resend": "^4.0.0",
+    "tailwind-merge": "^2.5.2",
+    "usehooks-ts": "^3.1.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
